# weeyev.github.io

./: .env  CHANGELOG.md  README.md  about.md  archive.html  blogged.cabal  index.html  projects.html  projects.md  site.hs  test_aeson.hs  test_parse.hs  test_process.hs
.github/workflows/: deploy.yml
css/: default.css
data/: bookmarks.json
docs/: archive.html  index.html  projects.html
docs/css/: default.css
docs/posts/: brainfuck.html  evaluators.html  everythingquantum.html  gemini3_gone.html  laplacians.html  links.html  quscii.html
posts/: brainfuck.html  brainfuck.md  evaluators.html  evaluators.md  everythingquantum.html  everythingquantum.md  gemini3_gone.md  laplacians.html  laplacians.md  links.html  links.md  quscii.html  quscii.md
scripts/: list_models.py  update_bookmarks.py
templates/: archive.html  bookmark-list.html  default.html  post-list.html  post.html
